--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <version>1.18.24</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
